--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,15 +1,12 @@
-<h1>{{title}}</h1>
 
+<app-nav></app-nav>
+
+
+<div class="coontainer" style="margin: 100px">
+
+  <app-home></app-home>
+
+
+</div>
 <i class="bi bi-2-circle"></i>
-<ul>
 
-
-
-
-  <li *ngFor="let user of users">
-    {{user.id}} - {{user.lastName}}
-
-
-  </li>
-
-</ul>
