added new interfaces and extensions

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,12 +1,16 @@
 
+
 <app-nav></app-nav>
 
+<body>
+<div class="container background-radial-gradient">
 
-<div class="coontainer" style="margin: 100px">
-
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 
 
 </div>
+
+</body>
+
 <i class="bi bi-2-circle"></i>
 
