--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-5">
+<div class="container ">
   <div style="text-align: center;">
 
     @if(!registerMode){
@@ -13,9 +13,10 @@
         <div class="row justify-content-center">
           <div class="col-4">
             <button class="btn btn-lg btn-light" (click)="registetoggle()">Start scrolling!</button>
-            <p class="lead"> Register form goes here</p>
+            <app-register [userFromHomeComponent]="users"
+                          (cancelRegister)="cancelRegisterMode($event)"
+            ></app-register>
           </div>
-
         </div>
 
       </div>
